--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </h2>
             <h3 id="" class=" mt-1 pb-4
             text-white ">
-            The Best Hair Salon In Richmond
+            The Best Hair Salon In Richmond.
           </h3>
           <a href="tel:1-804-588-6863" class="btn btn-outline-warning btn-lg  "><i class="fa fa-phone"><p class="d-inline pl-2">Call Us Now!</p></i></a>
         </div>
